syntax = "proto3";
package pryzmatics.server.icstaking;

import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "pryzmatics/icstaking/host_chain.proto";

option go_package = "github.com/pryzm-finance/pryzmatics/server/icstaking";

message QueryHostChainRequest {
  string host_chain_id = 1;
}

message QueryHostChainResponse {
  pryzmatics.icstaking.HostChain host_chain = 1 [(gogoproto.nullable) = false];
}

message QueryHostChainsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1 [(gogoproto.nullable) = true];
}

message QueryHostChainsResponse {
  repeated pryzmatics.icstaking.HostChain host_chains = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2 [(gogoproto.nullable) = true];
}

message QueryHostChainUnbondingTimeRequest {
  string host_chain_id = 1;
}

message QueryHostChainUnbondingTimeResponse {
  google.protobuf.Duration unbonding_time = 1 [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];
}
